# ncs-backend-3

./: .bazeliskrc  .bazelrc  .gitattributes  .gitignore  .gitlab-ci.yml  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
app/: README.md
app/bot/kaiheila/: README.md
app/bot/kaiheila/cmd/: BUILD.bazel  main.go
app/bot/kaiheila/conf/: BUILD.bazel  conf.go
app/bot/kaiheila/dao/: BUILD.bazel  dao.go  dao.mock.go  kaiheila.go
app/bot/kaiheila/service/: BUILD.bazel  helper.go  kaiheila.go  server.go  service.go
app/bot/qq/: README.md
app/bot/qq/cmd/: BUILD.bazel  main.go
app/bot/qq/conf/: BUILD.bazel  conf.go
app/bot/qq/dao/: BUILD.bazel  dao.go  dao.mock.go  qq.go
app/bot/qq/service/: BUILD.bazel  ban.go  player.go  qq.go  qqwebsocket.go  server.go  service.go
app/game/: README.md
app/game/a2s/: README.md
app/game/a2s/cmd/: BUILD.bazel  main.go
app/game/a2s/conf/: BUILD.bazel  conf.go
app/game/a2s/service/: BUILD.bazel  a2s.go  service.go
app/game/chat/: BUILD.bazel  chat.go
app/game/chat/cmd/: BUILD.bazel  main.go
app/game/chat/conf/: BUILD.bazel
app/game/chat/dao/: BUILD.bazel  chat.go  dao.go  dao.mock.go
app/game/chat/event/: BUILD.bazel  allchat.go
app/game/chat/service/: BUILD.bazel  chat.go  chat_test.go  helper.go  service.go
app/game/cookie/cmd/: BUILD.bazel  main.go
app/game/cookie/conf/: BUILD.bazel  config.go
app/game/cookie/dao/: BUILD.bazel  cookie.go  dao.go  dao.mock.go
app/game/cookie/model/: BUILD.bazel  cookie.go
app/game/cookie/service/: BUILD.bazel  cookie.go  cookie_test.go  service.go
app/game/cvar/cmd/: BUILD.bazel  main.go
app/game/cvar/conf/: BUILD.bazel
app/game/cvar/dao/: BUILD.bazel  cvar.go  dao.go  dao.mock.go
app/game/cvar/model/: BUILD.bazel  cvar.go
app/game/cvar/service/: BUILD.bazel  cvar.go  cvar_test.go  service.go
app/game/pass/cmd/: BUILD.bazel  main.go
app/game/pass/conf/: BUILD.bazel
app/game/pass/service/: BUILD.bazel  pass.go  pass_test.go  service.go
app/game/server/cmd/: BUILD.bazel  main.go
app/game/server/conf/: BUILD.bazel  config.go
app/game/server/dao/: BUILD.bazel  dao.go  dao.mock.go  server.go
app/game/server/event/: BUILD.bazel  changemap.go
app/game/server/model/: BUILD.bazel  server.go  ulits.go
app/game/server/service/: BUILD.bazel  server.go  server_test.go  service.go
app/game/skin/: README.md
app/game/skin/cmd/: BUILD.bazel  main.go
app/game/skin/conf/: BUILD.bazel
app/game/skin/dao/: BUILD.bazel  dao.go  dao.mock.go  skin.go
app/game/skin/model/: BUILD.bazel  skin.go
app/game/skin/service/: BUILD.bazel  service.go  skin.go
app/game/stats/cmd/: BUILD.bazel  main.go
app/game/stats/conf/: BUILD.bazel  conf.go
app/game/stats/dao/: BUILD.bazel  dao.go  dao.mock.go  stats.go
app/game/stats/model/: BUILD.bazel  stats.go
app/game/stats/service/: BUILD.bazel  service.go  stats.go
app/game/store/cmd/: BUILD.bazel  main.go
app/game/store/conf/: BUILD.bazel  conf.go
app/game/store/model/: BUILD.bazel  hotsale.go
app/game/store/service/: BUILD.bazel  service.go  store.go  store_test.go
app/game/user/cmd/: BUILD.bazel  main.go
app/game/user/conf/: BUILD.bazel  conf.go
app/game/user/service/: BUILD.bazel  service.go  user.go
app/gateway/cmd/: BUILD.bazel  main.go
app/gateway/game/cmd/: BUILD.bazel  main.go
app/gateway/game/service/: BUILD.bazel  backpack.go  game.go  pass.go  user.go
app/gateway/service/: BUILD.bazel  backpack.go  game.go  pass.go  server.go  service.go  user.go
app/gateway/web/cmd/: BUILD.bazel  main.go
app/gateway/web/service/: BUILD.bazel  auth.go  backpack.go  donate.go  game.go  service.go  user.go
app/hello/: README.md
app/hello/api/grpc/: BUILD.bazel  client.go  grpc_test.go  hello.pb.go  hello.proto  server.go
app/hello/cmd/: BUILD.bazel  main.go
app/hello/conf/: conf.go
app/hello/dao/: dao.go  dao.mock.go  hello.go
app/hello/model/: hello.go
app/hello/service/: BUILD.bazel  hello.go  server.go  server_test.go  service.go
app/job/refund/: BUILD.bazel  main.go
app/merge/: BUILD.bazel  main.go  model.go
app/server/api/grpc/: BUILD.bazel  client.go  server.go  server.pb.go  server.pb.gw.go  server.proto  server.swagger.json
app/server/cmd/: BUILD.bazel  main.go
app/server/conf/: BUILD.bazel
app/server/dao/: BUILD.bazel  dao.go  server.go
app/server/model/: BUILD.bazel  server.go  ulits.go
app/server/service/: BUILD.bazel  server.go  service.go
app/service/: README.md
app/service/auth/: README.md
app/service/auth/jwt/: BUILD.bazel  jwt.go  jwt_test.go  payload.go
app/service/auth/qq/: README.md
app/service/auth/steam/: README.md
app/service/backpack/: README.md
app/service/donate/cmd/: BUILD.bazel  main.go
app/service/donate/conf/: BUILD.bazel  conf.go
app/service/donate/dao/: BUILD.bazel  (+3 more)
app/service/pass/: README.md
app/service/user/: README.md
chart/: Chart.yaml  ins.yaml  oc.yaml  values.yaml
chart/charts/ncs-gateway/: Chart.yaml  values.yaml
chart/charts/ncs-gateway-game/: Chart.yaml  values.yaml
chart/charts/ncs-gateway-web/: Chart.yaml  values.yaml
chart/charts/ncs-services/: Chart.yaml  values.yaml
google/go-containerregistry/: BUILD.bazel  go-containerregistry.go
pkg/: README.md
pkg/cache/redis/: BUILD.bazel  redis.go
pkg/cmd/: BUILD.bazel  cmd.go  cmd_test.go
pkg/conf/: BUILD.bazel  conf.go  conf_test.go  ncs.yaml
pkg/database/mysql/: BUILD.bazel  model.go  mysql.go  mysql_test.go
pkg/database/redis/: BUILD.bazel  redis.go  stream.go
pkg/ecode/: BUILD.bazel  ecode.go  ecode_test.go
pkg/grpc/: grpc.go
pkg/json/: BUILD.bazel  json.go
pkg/jwt/: BUILD.bazel  cookie.go  grpc.go  jwt.go  jwt_test.go  payload.go
pkg/log/: BUILD.bazel  log.go  log_test.go
pkg/log/kaiheila/: BUILD.bazel  kaiheila.go
pkg/rpc/: BUILD.bazel  client.go  error.go  gateway.go  health.go  rpc.go  rpc_test.go  server.go
pkg/rpc/gateway/: BUILD.bazel  http.go  id.go  websocket.go
pkg/steam/: BUILD.bazel  IPlayerService.go  ISteamUser.go  code.go  error.go  steam.go  steam.mock.go
pkg/tracer/: BUILD.bazel  jaeger.go
(+752 files in other folders)
