load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:docker.bzl", "push_docker")

go_library(
    name = "merge_lib",
    srcs = [
        "main.go",
        "model.go",
    ],
    importpath = "backend/app/merge",
    visibility = ["//visibility:private"],
    deps = [
        "//app/service/backpack/items/model",
        "//app/service/backpack/user/model",
        "//app/service/user/account/model",
        "//app/service/user/money/model",
        "//app/service/user/vip/model",
        "//pkg/json",
        "@io_gorm_datatypes//:datatypes",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)

go_binary(
    name = "merge",
    embed = [":merge_lib"],
    visibility = ["//visibility:public"],
)

push_docker(
    name = "push",
    app_name = "merge",
    embed = [":merge_lib"],
)
