load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["go-containerregistry.go"],
    importpath = "backend/google/go-containerregistry",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_go_containerregistry//:go_default_library"],
)
