load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "conf",
    srcs = ["conf.go"],
    importpath = "backend/pkg/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "conf_test",
    srcs = ["conf_test.go"],
    data = ["ncs.yaml"],
    embed = [":conf"],
)
