load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ecode",
    srcs = ["ecode.go"],
    importpath = "backend/pkg/ecode",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "ecode_test",
    srcs = ["ecode_test.go"],
    embed = [":ecode"],
    deps = ["@org_golang_google_grpc//codes"],
)
