load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["json.go"],
    importpath = "backend/pkg/json",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ecode:go_default_library",
        "@com_github_json_iterator_go//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
