load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jwt",
    srcs = [
        "cookie.go",
        "grpc.go",
        "jwt.go",
        "payload.go",
    ],
    importpath = "backend/pkg/jwt",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/rpc/gateway",
        "@com_github_dgrijalva_jwt_go//:jwt-go",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "jwt_test",
    srcs = ["jwt_test.go"],
    embed = [":jwt"],
    deps = [
        "@com_github_smartystreets_goconvey//convey",
        "@org_golang_google_grpc//metadata",
    ],
)
