load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpc",
    srcs = [
        "client.go",
        "gateway.go",
        "health.go",
        "server.go",
    ],
    importpath = "backend/pkg/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ecode",
        "//pkg/log",
        "//pkg/rpc/gateway",
        "@com_github_golang_glog//:glog",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//retry",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tracing/opentracing",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//ext",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//health/grpc_health_v1",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_test(
    name = "rpc_test",
    srcs = ["rpc_test.go"],
    embed = [":rpc"],
    deps = ["@org_golang_google_grpc//:grpc"],
)
