load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "IPlayerService.go",
        "code.go",
        "error.go",
        "steam.go",
        "steam.mock.go",
    ],
    importpath = "backend/pkg/steam",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/json:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)
