load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "steam",
    srcs = [
        "IPlayerService.go",
        "ISteamUser.go",
        "code.go",
        "error.go",
        "steam.go",
        "steam.mock.go",
    ],
    importpath = "backend/pkg/steam",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/json",
        "@com_github_golang_mock//gomock",
    ],
)
