load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:docker.bzl", "push_docker")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "backend/app/gateway/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/gateway/service:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_grpc_ecosystem_grpc_gateway//runtime:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

push_docker(
    name = "push",
    app_name = "gateway",
    embed = [":go_default_library"],
)
