load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "service.go",
        "user.go",
    ],
    importpath = "backend/app/gateway/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/game/server/api/grpc:go_default_library",
        "//app/service/user/account/api/grpc:go_default_library",
        "//app/service/user/admin/api/grpc:go_default_library",
        "//app/service/user/ban/api/grpc:go_default_library",
        "//app/service/user/sign/api/grpc:go_default_library",
        "//app/service/user/vip/api/grpc:go_default_library",
        "//pkg/rpc:go_default_library",
    ],
)
