load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "backpack.go",
        "game.go",
        "pass.go",
        "service.go",
        "user.go",
    ],
    importpath = "backend/app/gateway/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/game/server/api/grpc:go_default_library",
        "//app/game/skin/api/grpc:go_default_library",
        "//app/game/store/api/grpc:go_default_library",
        "//app/game/user/api/grpc:go_default_library",
        "//app/service/backpack/items/api/grpc:go_default_library",
        "//app/service/backpack/user/api/grpc:go_default_library",
        "//app/service/pass/reward/api/grpc:go_default_library",
        "//app/service/pass/user/api/grpc:go_default_library",
        "//app/service/user/account/api/grpc:go_default_library",
        "//app/service/user/admin/api/grpc:go_default_library",
        "//app/service/user/ban/api/grpc:go_default_library",
        "//app/service/user/money/api/grpc:go_default_library",
        "//app/service/user/sign/api/grpc:go_default_library",
        "//app/service/user/title/api/grpc:go_default_library",
        "//app/service/user/vip/api/grpc:go_default_library",
        "//pkg/rpc:go_default_library",
    ],
)
