load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "backend/app/hello/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/hello/api/grpc:go_default_library",
        "//app/hello/service:go_default_library",
        "//pkg/cmd:go_default_library",
        "//pkg/log:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
