load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "backend/app/hello/service",
    visibility = ["//visibility:public"],
    deps = ["//app/hello/api/grpc:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = ["//app/hello/api/grpc:go_default_library"],
)
