load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:docker.bzl", "push_docker")

go_library(
    name = "refund_lib",
    srcs = ["main.go"],
    importpath = "backend/app/job/refund",
    visibility = ["//visibility:private"],
    deps = [
        "//app/service/backpack/items/api/grpc/v1:grpc",
        "//app/service/backpack/user/api/grpc/v1:grpc",
        "//app/service/user/account/api/grpc/v1:grpc",
        "//app/service/user/money/api/grpc/v1:grpc",
    ],
)

go_binary(
    name = "refund",
    embed = [":refund_lib"],
    visibility = ["//visibility:public"],
)

push_docker(
    name = "push",
    app_name = "job-refund",
    embed = [":refund_lib"],
)
