load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
        "service.go",
    ],
    importpath = "backend/app/server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/server/api/grpc:go_default_library",
        "//app/server/conf:go_default_library",
        "//app/server/dao:go_default_library",
        "//pkg/ecode:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
