load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mysql.go"],
    importpath = "backend/pkg/database/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_data_dog_go_sqlmock//:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
        "@com_github_jinzhu_gorm//dialects/mysql:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mysql_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_smartystreets_goconvey//convey:go_default_library"],
)
