load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["mysql.go"],
    importpath = "backend/pkg/database/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "@com_github_data_dog_go_sqlmock//:go_default_library",
        "@io_gorm_driver_mysql//:go_default_library",
        "@io_gorm_gorm//:go_default_library",
        "@io_gorm_gorm//logger:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["mysql_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_smartystreets_goconvey//convey:go_default_library"],
)
