load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mysql",
    srcs = [
        "model.go",
        "mysql.go",
    ],
    importpath = "backend/pkg/database/mysql",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_gorm//:gorm",
        "@io_gorm_gorm//logger",
    ],
)

go_test(
    name = "mysql_test",
    srcs = ["mysql_test.go"],
    embed = [":mysql"],
    deps = ["@com_github_smartystreets_goconvey//convey"],
)
