load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "http.go",
        "id.go",
        "websocket.go",
    ],
    importpath = "backend/pkg/rpc/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_net//context",
    ],
)
