load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dao",
    srcs = [
        "dao.go",
        "dao.mock.go",
        "kaiheila.go",
    ],
    importpath = "backend/app/bot/kaiheila/dao",
    visibility = ["//visibility:public"],
    deps = [
        "//app/bot/kaiheila/conf",
        "//app/game/chat/event",
        "//pkg/database/redis",
        "@com_github_go_redis_redis_v7//:redis",
        "@com_github_golang_mock//gomock",
    ],
)
