load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "helper.go",
        "kaiheila.go",
        "service.go",
    ],
    importpath = "backend/app/bot/kaiheila/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/bot/kaiheila/api/grpc/v1:grpc",
        "//app/bot/kaiheila/conf",
        "//app/bot/kaiheila/dao",
        "//app/game/chat",
        "//app/game/chat/event",
        "//pkg/json",
        "//pkg/log",
        "@com_github_gunslinger23_kaiheila//:kaiheila",
    ],
)
