load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "kaiheila.go",
        "service.go",
    ],
    importpath = "backend/app/bot/kaiheila/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/bot/kaiheila/api/grpc/v1:grpc",
        "//app/bot/kaiheila/conf",
        "//app/bot/kaiheila/dao",
        "//app/game/chat",
        "//app/game/chat/event",
        "//app/game/server/event",
        "//app/service/donate/event",
        "//pkg/json",
        "//pkg/log",
        "//pkg/log/kaiheila",
        "@com_github_lonelyevil_khl//:khl",
    ],
)
