load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "qq.go",
        "qqwebsocket.go",
        "service.go",
    ],
    importpath = "backend/app/bot/qq/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/bot/qq/api/grpc/v1:go_default_library",
        "//app/bot/qq/conf:go_default_library",
        "//app/game/chat:go_default_library",
        "//app/game/chat/api/grpc:go_default_library",
        "//app/game/server/api/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
        "@com_github_miremid_amy//:go_default_library",
        "@com_github_miremid_amy//message:go_default_library",
        "@com_github_miremid_amy//websocket/model:go_default_library",
    ],
)
