load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "qq.go",
        "qqwebsocket.go",
        "service.go",
    ],
    importpath = "backend/app/bot/qq/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/bot/qq/api/grpc/v1:grpc",
        "//app/bot/qq/conf",
        "//app/bot/qq/dao",
        "//app/game/chat",
        "//app/game/chat/event",
        "//app/game/server/api/grpc/v1:grpc",
        "//app/game/server/event",
        "//pkg/log",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_miremid_amy//:amy",
        "@com_github_miremid_amy//message",
        "@com_github_miremid_amy//websocket/model",
    ],
)
