load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:docker.bzl", "push_docker")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "backend/app/game/a2s/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/game/a2s/api/grpc/v1:grpc",
        "//app/game/a2s/conf",
        "//app/game/a2s/service",
        "//pkg/cmd",
        "//pkg/log",
        "//pkg/rpc",
        "//pkg/tracer",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

push_docker(
    name = "push",
    app_name = "game-a2s",
    embed = [":cmd_lib"],
)
