load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "a2s.go",
        "service.go",
    ],
    importpath = "backend/app/game/a2s/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/game/a2s/api/grpc/v1:go_default_library",
        "//app/game/a2s/conf:go_default_library",
        "@com_github_newpage_community_go_steam//:go_default_library",
    ],
)
