load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "a2s.go",
        "service.go",
    ],
    importpath = "backend/app/game/a2s/service",
    visibility = ["//visibility:public"],
    deps = [
        "//app/game/a2s/api/grpc/v1:grpc",
        "//app/game/a2s/conf",
        "@com_github_newpage_community_go_steam//:go-steam",
    ],
)
