load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build:docker.bzl", "push_docker")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "backend/app/game/chat/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//app/game/chat/api/grpc/v1:grpc",
        "//app/game/chat/conf",
        "//app/game/chat/service",
        "//pkg/cmd",
        "//pkg/log",
        "//pkg/tracer",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

push_docker(
    name = "push",
    app_name = "game-chat",
    embed = [":cmd_lib"],
)
