load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "conf",
    srcs = ["config.go"],
    importpath = "backend/app/game/chat/conf",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/conf",
        "//pkg/log",
        "@com_github_go_redis_redis_v8//:redis",
    ],
)
